owner-sidebar-topbar

--- a/src/app/owner/owner.component.html
+++ b/src/app/owner/owner.component.html
@@ -1,1 +1,11 @@
-<p>owner works!</p>
+<div class="layout">
+  <app-owner-top-bar class="topbar"></app-owner-top-bar>
+
+  <div class="main-content">
+    <app-owner-side-bar class="sidebar"></app-owner-side-bar>
+
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
